Don't upload the error

--- a/HeniTaskQuestions.ipynb
+++ b/HeniTaskQuestions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "1  http://www.christies.com/lotfinderimages/D5973...  11 February 2016,   "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "4                                           5 by 5in    12.7   12.7    NaN"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,18 +237,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 're' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# 19 x 52cm\u001b[39;00m\n\u001b[0;32m      2\u001b[0m reg1 \u001b[39m=\u001b[39m \u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m(?P<height>\u001b[39m\u001b[39m\\\u001b[39m\u001b[39md+)×(?P<width>\u001b[39m\u001b[39m\\\u001b[39m\u001b[39md+)(?P<unit>cm)\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> 3\u001b[0m re_search1 \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39msearch(reg1, dim_df[\u001b[39m\"\u001b[39m\u001b[39mrawDim\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m0\u001b[39m])\n\u001b[0;32m      4\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mfloat\u001b[39m(re_search1\u001b[39m.\u001b[39mgroup(\u001b[39m\"\u001b[39m\u001b[39mheight\u001b[39m\u001b[39m\"\u001b[39m)), \u001b[39mfloat\u001b[39m(re_search1\u001b[39m.\u001b[39mgroup(\u001b[39m\"\u001b[39m\u001b[39mwidth\u001b[39m\u001b[39m\"\u001b[39m)), re_search1\u001b[39m.\u001b[39mgroup(\u001b[39m\"\u001b[39m\u001b[39munit\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m      6\u001b[0m \u001b[39m# 50 x 66,4 cm\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 're' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19.0 52.0 cm\n",
+      "50.0 664.0 cm\n",
+      "168.9 274.3 3.8 cm\n",
+      "35.6 25.1 cm\n",
+      "12.7 12.7\n"
      ]
     }
    ],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
        "4                                           5 by 5in    12.7   12.7    NaN"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>https://www.bearspace.co.uk/product-page/el-dorado-by-john-greenwood</td>\n",
+       "      <td>https://www.bearspace.co.uk/product-page/el-do...</td>\n",
        "      <td>El Dorado by John Greenwood</td>\n",
        "      <td>Oil on Gessoed canvas on Board</td>\n",
        "      <td>45.0</td>\n",
@@ -482,7 +482,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>https://www.bearspace.co.uk/product-page/conversation-2-by-vic-wright</td>\n",
+       "      <td>https://www.bearspace.co.uk/product-page/conve...</td>\n",
        "      <td>Conversation 2 by Vic Wright</td>\n",
        "      <td>Black and white casting cement with 24k gold leaf</td>\n",
        "      <td>12.0</td>\n",
@@ -491,7 +491,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>https://www.bearspace.co.uk/product-page/constructed-veneer-vii-by-olly-fathers</td>\n",
+       "      <td>https://www.bearspace.co.uk/product-page/const...</td>\n",
        "      <td>Constructed Veneer VII by Olly Fathers</td>\n",
        "      <td>Various wood veneers, various woods, board</td>\n",
        "      <td>34.0</td>\n",
@@ -500,7 +500,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>https://www.bearspace.co.uk/product-page/disperse-by-dionne-cole</td>\n",
+       "      <td>https://www.bearspace.co.uk/product-page/dispe...</td>\n",
        "      <td>Disperse by Dionne Cole</td>\n",
        "      <td>76 x 101.6 cm</td>\n",
        "      <td>76.0</td>\n",
@@ -509,7 +509,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>https://www.bearspace.co.uk/product-page/conversation-by-vic-wright</td>\n",
+       "      <td>https://www.bearspace.co.uk/product-page/conve...</td>\n",
        "      <td>Conversation by Vic Wright</td>\n",
        "      <td>18K gold leaf and white casting cement</td>\n",
        "      <td>16.5</td>\n",
@@ -521,36 +521,36 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                               url  \\\n",
-       "0  https://www.bearspace.co.uk/product-page/el-dorado-by-john-greenwood              \n",
-       "1  https://www.bearspace.co.uk/product-page/conversation-2-by-vic-wright             \n",
-       "2  https://www.bearspace.co.uk/product-page/constructed-veneer-vii-by-olly-fathers   \n",
-       "3  https://www.bearspace.co.uk/product-page/disperse-by-dionne-cole                  \n",
-       "4  https://www.bearspace.co.uk/product-page/conversation-by-vic-wright               \n",
+       "                                                 url  \\\n",
+       "0  https://www.bearspace.co.uk/product-page/el-do...   \n",
+       "1  https://www.bearspace.co.uk/product-page/conve...   \n",
+       "2  https://www.bearspace.co.uk/product-page/const...   \n",
+       "3  https://www.bearspace.co.uk/product-page/dispe...   \n",
+       "4  https://www.bearspace.co.uk/product-page/conve...   \n",
        "\n",
        "                                    title  \\\n",
-       "0  El Dorado by John Greenwood              \n",
-       "1  Conversation 2 by Vic Wright             \n",
+       "0             El Dorado by John Greenwood   \n",
+       "1            Conversation 2 by Vic Wright   \n",
        "2  Constructed Veneer VII by Olly Fathers   \n",
-       "3  Disperse by Dionne Cole                  \n",
-       "4  Conversation by Vic Wright               \n",
+       "3                 Disperse by Dionne Cole   \n",
+       "4              Conversation by Vic Wright   \n",
        "\n",
        "                                               media  height_cm  width_cm  \\\n",
-       "0  Oil on Gessoed canvas on Board                     45.0       38.0       \n",
-       "1  Black and white casting cement with 24k gold leaf  12.0       8.0        \n",
-       "2  Various wood veneers, various woods, board         34.0       25.0       \n",
-       "3  76 x 101.6 cm                                      76.0       101.6      \n",
-       "4  18K gold leaf and white casting cement             16.5       13.0       \n",
+       "0                     Oil on Gessoed canvas on Board       45.0      38.0   \n",
+       "1  Black and white casting cement with 24k gold leaf       12.0       8.0   \n",
+       "2         Various wood veneers, various woods, board       34.0      25.0   \n",
+       "3                                      76 x 101.6 cm       76.0     101.6   \n",
+       "4             18K gold leaf and white casting cement       16.5      13.0   \n",
        "\n",
        "  price_gbp  \n",
        "0  3,800.00  \n",
-       "1  320.00    \n",
-       "2  940.00    \n",
+       "1    320.00  \n",
+       "2    940.00  \n",
        "3  1,400.00  \n",
-       "4  440.00    "
+       "4    440.00  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
