Decimal point typo

--- a/HeniTaskQuestions.ipynb
+++ b/HeniTaskQuestions.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
      "output_type": "stream",
      "text": [
       "19.0 52.0 cm\n",
-      "50.0 664.0 cm\n",
+      "50.0 66.4 cm\n",
       "168.9 274.3 3.8 cm\n",
       "35.6 25.1 cm\n",
       "12.7 12.7\n"
@@ -263,7 +263,7 @@
     "# 50 x 66,4 cm\n",
     "reg2 = r\"(?P<height>\\d+\\,?\\d+)\\s?x\\s?(?P<width>\\d+\\,\\d+)\\s?(?P<unit>cm)\"\n",
     "re_search2 = re.search(reg2, dim_df[\"rawDim\"][1])\n",
-    "width = re_search2.group(\"width\").replace(\",\",\"\")\n",
+    "width = re_search2.group(\"width\").replace(\",\",\".\")\n",
     "print(float(re_search2.group(\"height\")), float(width), re_search2.group(\"unit\"))\n",
     "\n",
     "# 168.9 x 274.3 x 3.8 cm (66 1/2 x 108 x 1 1/2 in.)\n",
